test/scc/ext/tm/semantic-errors/018.t
void test() _Transaction_safe
{
    int a, b;
    a = (volatile int)b;
}